add 返回纯地址的接口
